--- a/Spanish Book Analysis Github.ipynb
+++ b/Spanish Book Analysis Github.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### These are the visualisations of the blog post https://nickpartridge.com/blog/how-hard-is-don-quixote-a-difficulty-analysis-of-19-popular-spanish-books. To view the visualisations properly, go to https://nbviewer.org/github/nick-partridge/spanish-book-analysis/blob/main/Spanish%20Book%20Analysis%20Github.ipynb"
+    "### These are the visualisations of the blog post https://nickpartridge.com/blog/how-hard-is-don-quixote-a-difficulty-analysis-of-19-popular-spanish-books. \n",
+    "\n",
+    "##### To view the visualisations properly, go to https://nbviewer.org/github/nick-partridge/spanish-book-analysis/blob/main/Spanish%20Book%20Analysis%20Github.ipynb"
    ]
   },
   {
